fix news box too long

--- a/css/style.css
+++ b/css/style.css
@@ -420,7 +420,7 @@ body.offcanvas {
 .lance-heading {
   font-size: 18px;
   margin-top: 7em;
-  margin-bottom: 1em;
+  margin-bottom: 10em;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 5px;
